# python-ontology

./: .gitignore  README.md  mix.exs
.spec/: state.json
.spec/decisions/: README.md  python_ontology.decision.extractor_builder_boundary.md  python_ontology.decision.fact_confidence_model.md  python_ontology.decision.initial_analysis_slice.md  python_ontology.decision.initial_python_ontology_architecture.md  python_ontology.decision.iri_identity_strategy.md  python_ontology.decision.normalized_syntax_model.md  python_ontology.decision.ontology_turtle_file_layers.md  python_ontology.decision.parser_bridge_boundary.md  python_ontology.decision.project_analysis_scope.md  python_ontology.decision.validation_strategy.md
.spec/specs/: extractor_builder_boundary.spec.md  fact_confidence_model.spec.md  implementation_wave_plan.spec.md  initial_analysis_slice.spec.md  iri_identity_strategy.spec.md  normalized_syntax_model.spec.md  ontology_turtle_files.spec.md  package.spec.md  parser.spec.md  project_analysis_scope.spec.md  validation_strategy.spec.md
lib/: python_ontology.ex
lib/python_ontology/: analysis.ex  confidence.ex  extractors.ex  facts.ex  iri.ex  (+5 more)
native/python_ontology_parser/: Cargo.toml
native/python_ontology_parser/src/: lib.rs
test/: python_ontology_test.exs  test_helper.exs
test/fixtures/python_projects/src_layout/: pyproject.toml
test/fixtures/python_projects/src_layout/.pytest_cache/: cached.py
test/fixtures/python_projects/src_layout/src/sample_pkg/: __init__.py  api.pyi  app.py
test/fixtures/python_projects/src_layout/tests/: test_app.py
(+179 files in other folders)
