# covers: python_ontology.parser.tree_sitter_python_authority python_ontology.parser.elixir_owned_adapter python_ontology.parser.no_python_runtime_dependency python_ontology.parser.no_project_code_execution python_ontology.parser.adapter_boundary
[package]
name = "python_ontology_parser"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "python_ontology_parser"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.38.0"
tree-sitter = "0.26.9"
tree-sitter-python = "0.25.0"
