# covers: python_ontology.project_analysis_scope.root_detection python_ontology.project_analysis_scope.include_python_sources python_ontology.project_analysis_scope.include_stub_files python_ontology.project_analysis_scope.exclude_environment_dirs python_ontology.project_analysis_scope.test_scope_marking python_ontology.project_analysis_scope.no_dependency_traversal_default
[project]
name = "src-layout-fixture"
version = "0.1.0"
